python/testData/inspections/PyCompatibilityInspection/tryExcept313Against27.py
try:
    pass
<error descr="Python version 3.13 does not support this syntax">except IOError, OSError:
    pass</error>